--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.6.2",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "mongoose": "^8.0.3",
     "socket.io": "^4.7.2",
     "ws": "^8.15.1"
   }
