--- a/api/package.json
+++ b/api/package.json
@@ -1,25 +1,21 @@
 {
-  "name": "raspberry-sensore",
+  "name": "api",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.6.2",
+    "axios": "^1.6.7",
     "body-parser": "^1.20.2",
-    "connect-mongo": "^5.1.0",
-    "cors": "^2.8.5",
     "dotenv": "^16.4.4",
-    "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "express-session": "^1.18.0",
+    "fs": "^0.0.1-security",
     "mongoose": "^8.1.2",
-    "passport": "^0.7.0",
-    "passport-google-oauth20": "^2.0.0",
-    "socket.io": "^4.7.2"
+    "socket.io": "^4.7.4"
   }
 }
