--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "dependencies": {
-    "axios": "^1.6.7",
+    "axios": "^1.6.8",
     "body-parser": "^1.20.2",
-    "express": "^4.18.2",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "mongoose": "^8.1.2"
   }
 }
