--- a/api/package.json
+++ b/api/package.json
@@ -16,6 +16,8 @@
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
     "mongoose": "^8.1.2",
-    "socket.io": "^4.7.4"
+    "socket.io": "^4.7.4",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0"
   }
 }
