--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "body-parser": "^1.20.2",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "mongoose": "^8.1.2"
+    "mongoose": "^8.1.2",
+    "react": "^18.3.1"
   }
 }
